--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,26 +25,33 @@
             <source src="video.mp4" type="video/mp4">
             Your browser dose not support the video tag.
         </video>
-
-
+ 
         <div class="caption">
 
             <h1>Kingdom Saudi Arabia</h1>
-            <h2>this is my subtitle</h2>
-
-            <a href="#">Start</a>
-
-
+            <h3>  لسنا قلقين على مستقبل المملكة، بل نتطلع إلى مستقبل أكثر إشراقًا، قادرون على "</hr>
+            <h3>." أن نصنعه - بعون الله - بثرواتها البشرية والطبيعية والمكتسبة التي أنعم الله بها عليها </hr></h3>     
+            <h4> .ولي العهد : محمد بن سلمان -</h4>
+            
+            <button class="btn">
+                <a href="#">الى حضارتنا </a>
+            </button>
 
         </div>
 
     </div>
 
-
-
     <script src ="JS/app.js"></script>
 
-
+    <section class="المعالم">
+        <div class="quality">
+            <img
+            src="imag.jpeg"
+            alt="العلا"
+            >
+        </div>
+    </section>
 
 </body>
+
 </html>
