--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     
     <link href="CSS/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
 
@@ -28,7 +28,7 @@
  
         <div class="caption">
 
-            <h1>Kingdom Saudi Arabia</h1>
+            <h1> Saudi World</h1>
             <h3>  لسنا قلقين على مستقبل المملكة، بل نتطلع إلى مستقبل أكثر إشراقًا، قادرون على "</hr>
             <h3>." أن نصنعه - بعون الله - بثرواتها البشرية والطبيعية والمكتسبة التي أنعم الله بها عليها </hr></h3>     
             <h4> .ولي العهد : محمد بن سلمان -</h4>
@@ -41,17 +41,87 @@
 
     </div>
 
-    <script src ="JS/app.js"></script>
-
-    <section class="المعالم">
-        <div class="quality">
-            <img
-            src="imag.jpeg"
-            alt="العلا"
-            >
+    <!-- الصفحة الثانية -->
+        <!-- الصور -->
+        <div class="container">
+            <div class="card">
+                <div class="image">
+                    <img src="imag.jpeg" class="pic">
+                </div>  
+                          <!-- الكلام -->
+             <div class="info">
+               <div class="content">
+                   <p class="text-1">العلا</p>
+                   <p class="text-2">hhhhhhhhhhhhhhhhhhhhhh
+                        jjjjjjjjjjjjjjjjjjjj
+                         lllllllllllllllllllllllllllllll</p>
+                        </div>
+                                <!-- الزر -->
+                        <div class="btn">
+                          <button class="btn-1">أعرف أكثر</button>
+                   </div>
+                 </div>
+            </div>
+                           <!-- المكان الثاني -->
+            <div class="card">
+                <div class="image">
+                    <img src="imag2.jpeg" class="pic">
+                </div>  
+                          <!-- الكلام -->
+             <div class="info">
+               <div class="content">
+                   <p class="text-1">مكتبة اثراء</p>
+                   <p class="text-2">hhhhhhhhhhhhhhhhhhhhhh
+                        jjjjjjjjjjjjjjjjjjjj
+                         lllllllllllllllllllllllllllllll</p>
+                        </div>
+                                <!-- الزر -->
+                        <div class="btn">
+                          <button class="btn-1">أعرف أكثر</button>
+                   </div>
+                 </div>
+            </div>
+                            <!-- المكان الثالث -->
+            <div class="card">
+                <div class="image">
+                    <img src="imag3.jpeg" class="pic">
+                </div>  
+                          <!-- الكلام -->
+             <div class="info">
+               <div class="content">
+                   <p class="text-1">جزيرة فرسان</p>
+                   <p class="text-2">hhhhhhhhhhhhhhhhhhhhhh
+                        jjjjjjjjjjjjjjjjjjjj
+                         lllllllllllllllllllllllllllllll</p>
+                        </div>
+                                <!-- الزر -->
+                        <div class="btn">
+                          <button class="btn-1">أعرف أكثر</button>
+                   </div>
+                 </div>
+            </div>
+        </div> 
+        <div>
+            <!-- المكان الرابع -->
+            <div class="card">
+                <div class="image">
+                    <img src="imag3.jpeg" class="pic">
+                </div>  
+                          <!-- الكلام -->
+             <div class="info">
+               <div class="content">
+                   <p class="text-1">جزيرة فرسان</p>
+                   <p class="text-2">hhhhhhhhhhhhhhhhhhhhhh
+                        jjjjjjjjjjjjjjjjjjjj
+                         lllllllllllllllllllllllllllllll</p>
+                        </div>
+                                <!-- الزر -->
+                        <div class="btn">
+                          <button class="btn-1">أعرف أكثر</button>
+                   </div>
+                 </div>
+            </div>
         </div>
-    </section>
-
 </body>
 
 </html>
